# CVRF-CSAF-Converter

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  REQUIREMENTS.txt  config.yaml  cvrf2csaf.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
.github/workflows/: pylint.yml
cvrf2csaf/: __init__.py  __main__.py  cvrf2csaf.py  validate.py
cvrf2csaf/common/: common.py  utils.py
cvrf2csaf/config/: config.yaml
cvrf2csaf/section_handlers/: acknowledgments.py  acknowlegments.py  comment.py  document_acknowledgments.py  document_acknowlegments.py  document_aggregate_severity.py  document_category.py  document_csaf_version.py  document_distribution.py  document_lang.py  document_leaf_elements.py  document_notes.py  document_publisher.py  document_references.py  document_source_lang.py  document_title.py  document_tracking.py  notes.py  product_tree.py  references.py  toplevel_leaf_elements.py  vulnerability.py
examples/1.2/: cvrf_example_a.xml  cvrf_example_custom.xml  cvrf_example_vulnerabilities.xml
examples/examples_cisco/: cisco-asa-kerberos-bypass-96Gghe2sS_cvrf.xml  cisco-sa-20151209-java-deserialization_cvrf.xml  cisco-sa-20160525-ipv6_cvrf.xml  cisco-sa-20160609-ipp_cvrf.xml  cisco-sa-20160727-esa_cvrf.xml  cisco-sa-20160927-openssl_cvrf.xml  cisco-sa-20170124-webex_cvrf.xml  cisco-sa-20170317-cmp_cvrf.xml  cisco-sa-20170629-snmp_cvrf.xml  cisco-sa-20171115-firepower1_cvrf.xml  cisco-sa-20180117-elm_cvrf.xml  cisco-sa-20180221-esc1_cvrf.xml  (+1459 more)
output/: sample.json
sample_input/: sample.xml
tests/: test_producers.sh
(+2052 files in other folders)
