[metadata]
name = cvrf2csaf
version = 0.0.1
author = TBA
author_email = TBA
description = Converts CVRF XML documents to CSAF JSON documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/csaf-tools/CVRF-CSAF-Converter/
project_urls =
    Bug Tracker = https://github.com/csaf-tools/CVRF-CSAF-Converter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    lxml>=4.7,<5
    PyYAML>=5.0,<6
    jsonschema>=4.0,<5

[options.entry_points]
console_scripts =
    cvrf2csaf = cvrf2csaf.cvrf2csaf:main

[options.package_data]
cvrf2csaf =
	config/config.yaml
